Get bills by headquarter enabled. API docs updated.
