# models/headquarterproduct.go
@@ -304,14 +304,6 @@ func (d *HeadquarterProductDao) Read(headquarterId, productId uint64) (*Headquar
 }
 
 func (d *HeadquarterProductDao) Update(headquarterId, productId uint64, product *HeadquarterProduct) error {
-	// Build sql
-	//var sql bytes.Buffer
-	/*sql.WriteString("UPDATE headquarter_product SET amount = ? WHERE headquarter_id = ? AND product_id = ?")
-
-	// Get engine.
-	engine := GetEngine(d.GetSchema())
-	_, err := engine.Exec(sql.String(), product.Amount, headquarterId, productId)
-	*/
 	// Get engine.
 	engine := GetEngine(d.GetSchema())
 	_, err := engine.Update(product, &HeadquarterProduct{HeadquarterId: headquarterId, ProductId: productId})
