# models/sale.go
@@ -170,6 +170,50 @@ func (d *SaleDao) FindByDates(start, end time.Time) ([]*SaleBillProduct, error) 
 	return sales, err
 }
 
+// @Description Get sales by headquarter ID and dates.
+// @Param headquarterID Headquarter ID.
+// @Param start Start time.
+// @Param end End time.
+func (d *SaleDao) FindByHeadquarterIDAndDates(headquarterID uint64, start, end time.Time) ([]*SaleBillProduct, error) {
+	// Build sentence.
+	var sql bytes.Buffer
+	sql.WriteString("SELECT * FROM ")
+	sql.WriteString("\"")
+	sql.WriteString(d.GetSchema())
+	sql.WriteString("\".")
+	sql.WriteString(SaleTableName)
+	sql.WriteString(" s INNER JOIN ")
+	sql.WriteString("\"")
+	sql.WriteString(d.GetSchema())
+	sql.WriteString("\".")
+	sql.WriteString(BillTableName)
+	sql.WriteString(" b ON s.bill_id = b.id AND b.headquarter_id = ")
+	sql.WriteString(fmt.Sprintf("%v", headquarterID))
+	sql.WriteString(" INNER JOIN ")
+	sql.WriteString("\"")
+	sql.WriteString(d.GetSchema())
+	sql.WriteString("\".")
+	sql.WriteString(ProductTableName)
+	sql.WriteString(" p ON s.product_id = p.id ")
+	sql.WriteString("WHERE s.created >= '")
+	sql.WriteString(start.UTC().Format(stringutil.UTCFormat))
+	sql.WriteString("' OR s.created <= '")
+	sql.WriteString(end.UTC().Format(stringutil.UTCFormat))
+	sql.WriteString("' ORDER BY s.id ASC")
+
+	// Get engine.
+	engine := GetEngine(d.GetSchema())
+	sales := make([]*SaleBillProduct, 0)
+
+	// Execute sentence.
+	err := engine.Sql(sql.String()).AllCols().Find(&sales)
+	if err != nil {
+		return nil, err
+	}
+
+	return sales, err
+}
+
 // @Description Get revenue by dates.
 // @Param start Start time.
 // @Param end End time.
@@ -204,4 +248,60 @@ func (d *SaleDao) RevenueByDates(start, end time.Time) (float64, error) {
 	}
 
 	return revenue, nil
+}
+
+// @Description Get revenue by headquarter ID and dates.
+// @Param headquarterID Headquarter ID.
+// @Param start Start time.
+// @Param end End time.
+func (d *SaleDao) RevenueByHeadquarterIDAndDates(headquarterID uint64, start, end time.Time) (float64, error) {
+	var revenue float64
+
+	// Find by dates and then group by bill programatically.
+	sales, err := d.FindByHeadquarterIDAndDates(headquarterID, start, end)
+	if err != nil {
+		return revenue, err
+	}
+	// Group by bill.
+	bills := make(map[uint64][]*SaleBillProduct)
+	for _, sale := range sales {
+		bills[sale.Sale.BillId] = append(bills[sale.Sale.BillId], sale)
+	}
+
+	// Calculate revenue.
+	for _, bSales := range bills {
+		// Calculate bill revenue.
+		var billRevenue float64
+		for _, sale := range bSales {
+			billRevenue += float64(sale.Sale.Amount) * sale.Product.Price
+		}
+		// Apply discount.
+		if len(bSales) > 0 {
+			billRevenue -= bSales[0].Bill.Discount
+		}
+
+		// Add bill revenue.
+		revenue += billRevenue
+	}
+
+	return revenue, nil
+}
+
+// @param billID Bill ID.
+func (d *SaleDao) DeleteByBillId(billID uint64) error {
+	// Build sentence.
+	var sql bytes.Buffer
+	sql.WriteString("DELETE FROM ")
+	sql.WriteString("\"")
+	sql.WriteString(d.GetSchema())
+	sql.WriteString("\".")
+	sql.WriteString(SaleTableName)
+	sql.WriteString(" WHERE s.bill_id = ")
+	sql.WriteString(fmt.Sprintf("%v", billID))
+
+	// Get engine.
+	engine := GetEngine(d.GetSchema())
+	_, err := engine.Exec(sql.String())
+
+	return err
 }
